--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <meta charset="utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>My First Bitstarter</title>
-        <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"/>
-        <style type="text/css">
-            body {
-                padding-top:20px;
-                padding-bottom:40px;
-            }
-            .container {
-                width:960px;
-            }
-            p.lead {
-                padding-top:15px;
-            }
-            .navigation, .pitch, .section1, .section2, .faq, .footer {
-                padding:10px 0px 10px 0px;
-            }
-            .video, .thermometer, .order, .social {
-                border:1px dotted;
-                text-align:center;
-            }
-            .video {
-                /* Internal borders have 1px width, thus need to add 4 X 1px to 120px. */
-                height:124px;
-                line-height:124px;
-            }
-            .thermometer, .order, .social {
-                height:40px;
-                line-height:40px;
-            }
-            div.row {
-                border:1px solid;
-            }
-        </style>
+        <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"/> >
+            <style type="text/css">
+                body {
+                    padding-top:20px;
+                    padding-bottom:40px;
+                }
+                .container {
+                    width:960px;
+                }
+                p.lead {
+                    padding-top:15px;
+                }
+                .navigation, .pitch, .section1, .section2, .faq, .footer {
+                    padding:10px 0px 10px 0px;
+                }
+                .video, .thermometer, .order, .social {
+                    border:1px dotted;
+                    text-align:center;
+                }
+                .video {
+                    /* Internal borders have 1px width, thus need to add 4 X 1px to 120px. */
+                    height:124px;
+                    line-height:124px;
+                }
+                .thermometer, .order, .social {
+                    height:40px;
+                    line-height:40px;
+                }
+                div.row {
+                    border:1px solid;
+                }
+            </style>
     </head>
 
     <body>
