index.html was updated with images and details and corrections

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p class="lead">Risks and challenges</p>
-                    <p>With all things, I think I rage against the unforeseen. I try to plan, and strategize, and predict, and                 </div>
+                    <p>With all things, I think I rage against the unforeseen. I try to plan, and strategize, and predict, and well foresee. Realistically, the only way to guard against production delays is to have multiple vendors capable of producing a quality product. Spend the time and energy to find more than just top search  but find the company that is the best at what it does without making a $40 t-shirt. From my experience as a supply chain manager, I am familiar with what it takes to source potential suppliers.</p>                </div>
                 <div class="span5 asset">
                     <img class="img-polaroid" src="https://www.dropbox.com/s/gt5nd1o5kqg36wg/Speech.png?dl=1">
                 </div>
