--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="row-fluid pitch">
                 <div class="span5 offset1 video">
-                    <img class="img-polaroid" src="https://www.dropbox.com/s/emw1c75cotbejor/Tshirst.png?dl=1">
+                    <img alt="custom_designs" class="img-polaroid" src="https://www.dropbox.com/s/emw1c75cotbejor/Tshirst.png?dl=1">
 
                 </div>
 
@@ -214,7 +214,7 @@
             <!-- http://placehold.it -->
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
-                    <img class="img-polaroid" src="https://www.dropbox.com/s/7i1e48d4w5tcqny/Yourdesign.png?dl=1">
+                    <img alt="your_designs" class="img-polaroid" src="https://www.dropbox.com/s/7i1e48d4w5tcqny/Yourdesign.png?dl=1">
                 </div>
                 <div class="span5 copy">
                     <p class="lead">Humorous and stylish gear targeted at those that love our double-XL bodies</p>
@@ -230,7 +230,7 @@
                     <p class="lead">Risks and challenges</p>
                     <p>With all things, I think I rage against the unforeseen. I try to plan, and strategize, and predict, and well foresee. Realistically, the only way to guard against production delays is to have multiple vendors capable of producing a quality product. Spend the time and energy to find more than just top search  but find the company that is the best at what it does without making a $40 t-shirt. From my experience as a supply chain manager, I am familiar with what it takes to source potential suppliers.</p>                </div>
                 <div class="span5 asset">
-                    <img class="img-polaroid" src="https://www.dropbox.com/s/gt5nd1o5kqg36wg/Speech.png?dl=1">
+                    <img alt="speech" class="img-polaroid" src="https://www.dropbox.com/s/gt5nd1o5kqg36wg/Speech.png?dl=1">
                 </div>
             </div>
 
