--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
                     <div class="span6 offset3 order">
                         <!-- Standard Bootstrap button. -->
                         <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                        <button class="btn btn-success btn-large">Pledge</button>
-                    </div>
+                        <a class="coinbase-button" data-button-style="custom_large" data-button-text="Preoder with Bitcoin" data-code="e8b63d818d0f7ecbbff21b777a22468a" href="https://coinbase.com/checkouts/e8b63d818d0f7ecbbff21b777a22468a">Preoder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>/*bitcoins*/                   </div>
                     <div class="span8 offset2 social">
                         <!-- Social buttons are not included in default Bootstrap. -->
                         <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
